[project]
name = "pixelflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.37.0",
    "einops>=0.8.2",
    "omegaconf>=2.3.0",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "torchdiffeq==0.2.4",
    "transformers>=5.3.0",
]

[tool.setuptools]
packages = ["pixelflow"]

[dependency-groups]
dev = [
    "gradio>=6.10.0",
]
